--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,64 @@
-.App {
-  text-align: center;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: arial;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.posts-container {
+  margin: 20px;
+  padding: 20px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.posts-container h2 {
+  margin: auto 40%;
+  padding: 40px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.posts-details {
+  padding: 20px;
+}
+
+.posts-details .each-post {
+  margin: 30px auto;
+  border-bottom: 1px solid #D3D3D3;
+  padding: 10px;
+  font-size: 14px;
+}
+
+.home-page {
   display: flex;
-  flex-direction: column;
+  justify-content: space-around;
   align-items: center;
+  height: 10vh;
+  background-color: #22B9FF;
+}
+
+.page-header {
+  flex: 1;
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  font-size: 50px;
+  font-weight: 600;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.nav-bar ul {
+  display: flex;
+  list-style: none;
+  width: 40vw;
+  justify-content: space-around;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.nav-bar ul .nav-link {
+  text-decoration: none;
+  color: white;
+  cursor: pointer;
+  font-size: 18px;
+  letter-spacing: 1px;
+  opacity: 0.8;
+}
+
+.nav-bar ul .nav-link:hover, .nav-bar ul .nav-link:focus {
+  opacity: 1;
 }
